@@ -1,3 +1,10 @@
+2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c:
+	  Better assignment for large variables.
+	* src/z80/peep.c:
+	  Fix code size calculation bug.
+
 2012-03-28 Borut Razem <borut.razem AT gmail.com>
 
 	* configure.in, configure, sdccconf_in.h,
